# Tango

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/pipeline/: __main__.py  cards.py  config.py  deck.py  definition.py  language.py  nlp.py  transcript.py  translation.py
src/yt_anki_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cards.py  test_deck.py  test_definition.py  test_language.py  test_main.py  test_nlp.py  test_state.py  test_transcript.py  test_translation.py
yt-anki-pipeline/: .gitignore  Makefile  Prototype Diagram.drawio
yt-anki-pipeline/src/pipeline/: cards.py  state.py
